feat: avisos de conexion